apps/torrents/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
spec:
  strategy:
    type: Recreate
  template:
    spec:
      serviceAccountName: qbittorrent
      containers:
        - name: gluetun
          image: ghcr.io/qdm12/gluetun:v3.41.3
          restartPolicy: Always
          imagePullPolicy: IfNotPresent
          ports:
            - name: control-server
              containerPort: 8000
              protocol: TCP
            - name: http-proxy
              containerPort: 8888
              protocol: TCP
            - name: tcp-shadowsocks
              containerPort: 8388
              protocol: TCP
            - name: udp-shadowsocks
              containerPort: 8388
              protocol: UDP
          livenessProbe:
            exec:
              command:
                - ip
                - a
                - show
                - tun0
          readinessProbe:
            exec:
              command:
                - ip
                - a
                - show
                - tun0
          securityContext:
            privileged: true
            capabilities:
              add:
                - NET_ADMIN
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: tun
              mountPath: /dev/net/tun
            - name: gluetun-config
              mountPath: /gluetun/auth/config.toml
              subPath: gluetun.toml
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:5.2.4
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: torrent-tcp
              containerPort: 6881
              protocol: TCP
            - name: torrent-udp
              containerPort: 6881
              protocol: UDP
          resources:
            requests:
              cpu: 50m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - SETGID
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          livenessProbe:
            initialDelaySeconds: 30
            httpGet:
              path: /
              port: http
          readinessProbe:
            initialDelaySeconds: 30
            httpGet:
              path: /
              port: http
          volumeMounts:
            - name: default-config
              mountPath: /config/qBittorrent/qBittorrent.conf
              subPath: qBittorrent.conf
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads/torrents
              subPath: torrents
      volumes:
        - name: gluetun-config
          secret:
            secretName: qbittorrent-gluetun-config
        - name: default-config
          configMap:
            name: qbittorrent-default-config
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-config
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
        - name: tun
          hostPath:
            path: /dev/net/tun
