apps/torrents/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
      name: http
    - port: 6881
      protocol: TCP
      targetPort: torrent-tcp
      name: torrent-tcp
    - port: 6881
      protocol: UDP
      targetPort: torrent-udp
      name: torrent-udp
