apps/torrents/qbittorrent/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
spec:
  parentRefs:
    - name: eg
      sectionName: https
      namespace: gateway
  hostnames:
    - qbittorrent.homie.e10n.me
  rules:
    - backendRefs:
        - name: qbittorrent
          namespace: torrents
          port: 80
